Fix CSS for a button overflowing

--- a/components/lenta/index.less
+++ b/components/lenta/index.less
@@ -1855,6 +1855,7 @@
 		button{
 			border-radius: 30px;
 			width: 350px;
+			max-width: 90%;
 		}
 	}
 
